[package]
name = "lctrl_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
actix-web = "4.3.1"
default-net = "0.16.1"
gethostname = "0.4.3"
# network-interface = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
# sysinfo = "0.29.4"
serde_json = "1.0"
tokio = "1.32.0"
lazy_static = "1.4.0"
actix-files = "0.6.2"
actix-multipart = "0.6.1"
env_logger = "0.10.0"
log = "0.4.20"
actix = "0.13.1"
actix-web-actors = "4.2.0"
actix-cors = "0.6.4"
include_dir = "0.7.3"
