[package]
name = "lctrl_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
actix-web = "4.3.1"
gethostname = "0.4.3"
# network-interface = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
# sysinfo = "0.29.4"
serde_json = "1.0"
tokio = "1.32.0"
lazy_static = "1.4.0"
actix-files = "0.6.2"
actix-multipart = "0.6.1"
# env_logger = "0.10.0"
log = "0.4.20"
actix = "0.13.1"
actix-web-actors = "4.2.0"
actix-cors = "0.6.4"
include_dir = "0.7.3"
rusqlite = { version = "0.31.0", features = ["bundled"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
netdev = "0.25.0"
libc = "0.2.161"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
async-stream = "0.3.6"

[build-dependencies]
cc = "1.1.36"
